@@ -183,7 +183,7 @@ MainWindow.9=Renommer
 MainWindow.10=Nettoyer
 MainWindow.14=Compresser
 GameListTableModel.3=Titre
-ShowAboutAction.2=\nD\u00E9velopp\u00E9 par Pierre Chastagner\n\nMerci \u00E0 t4ils pour son soutien :)\nTraduction allemande : IsSuE_\n\nAllez sur http://code.google.com/p/rofage/ pour :\n- R\u00E9cup\u00E9rer la derni\u00E8re version,\n- Rapporter un bug,\n- Demander une am\u00E9lioration\n- ou consulter/contribuer au wiki\n\nUtilise les librairies\n- jDOM (http://www.jdom.org/)\n- TrueZip (https://truezip.dev.java.net/)
+ShowAboutAction.2=\nD\u00E9velopp\u00E9 par Pierre Chastagner\n\nMerci \u00E0 t4ils pour son soutien :)\nTraduction allemande : IsSuE_\nTraduction hollandaise: Maikel Steneker\n\nAllez sur http://code.google.com/p/rofage/ pour :\n- R\u00E9cup\u00E9rer la derni\u00E8re version,\n- Rapporter un bug,\n- Demander une am\u00E9lioration\n- ou consulter/contribuer au wiki\n\nUtilise les librairies\n- jDOM (http://www.jdom.org/)\n- TrueZip (https://truezip.dev.java.net/)
 GameListSelectionListener.3=Release : 
 GameListSelectionListener.5=Taille de la rom : 
 GameListSelectionListener.2=CRC : 
