@@ -1,0 +1,246 @@
+SendMail=Stuur de maker een e-mail
+ReportBug=Meld een bug
+DuplicateExplanation=Voorkeurslocaties voor roms
+DuplicateAction=Verwijderen
+DuplicateWindowTitle=Verwijderen van dubbele roms
+ExportList=Exporteer naar een bestand
+ExportListAll=Alle roms
+ExportListGoodNamed=Roms met de goede naam
+ExportListBadNamed=Roms met de verkeerde naam
+ExportListMissing=Missende roms
+DuplicateSwingWorker.0=Dubbele roms worden gezocht
+DuplicateSwingWorker.1=Er is
+DuplicateSwingWorker.2=\ (meerdere locaties) om te zoeken naar
+DuplicateSwingWorker.3=\ spellen
+DuplicateSwingWorker.4=Hiermee VERWIJDER je bestanden van je harde schijf\!\n
+DuplicateSwingWorker.5=Weet je ZEKER dat je door wilt gaan?\n
+DuplicateSwingWorker.6=Dit proces is kan NIET ongedaan worden gemaakt...
+DuplicateSwingWorker.7=Bevestiging
+DuplicateSwingWorker.8=Bezig met annuleren op verzoek van gebruiker
+DuplicateSwingWorker.9=Beginnen met verwijderen...
+DuplicateSwingWorker.10=Wachten tot de aanpassingen aan het bestandssysteem gemaakt zijn...
+DuplicateSwingWorker.11=Bezig met opslaan...
+DuplicateSwingWorker.12=Dubbele roms zijn verwijderd\!
+DuplicateSwingWorker.13=Dubbele roms verwijderen van 
+DuplicateSwingWorker.16=Verwijderen van 
+DuplicateSwingWorker.19=Verwijderen van 
+DuplicateSwingWorker.20=\ (leeg archief)
+Duplicate=Dubbele roms
+Up=Omhoog
+Down=Omlaag
+Saving=Bezig met opslaan...
+RomFiles=roms
+RomMgt=Roms beheren
+ImportWindowTitle=Importeren
+ImportSwingWorker.0=Bezig met schoonmaken...
+ImportSwingWorker.1=Importeren is voltooid\!
+ImportSwingWorker.2=Zuiveren van verkeerde bestanden en kopiëren van goede bestanden... (
+ImportSwingWorker.3=\ bestanden die moeten worden gescand)
+ImportSwingWorker.4=\ verwijderd van de lijst
+ImportSwingWorker.5=Kopiëren 
+ImportSwingWorker.6=\ in 
+ImportSwingWorker.7=Kopiëren is voltooid\!
+CompressionRate=Compressiekwaliteit
+Compression=Compressie
+DeleteSource=Bronbestanden verwijderen na compressie
+NotClean=Slechte dumps
+ExportWindowTitle=Rom exporteren
+ExportSwingWorker.0=Voorbereiden op exporteren...
+ExportSwingWorker.1=\ bestanden te exporteren
+ExportSwingWorker.2=Exporteren voltooid
+ExportSwingWorker.3=Het bestand
+ExportSwingWorker.4=\ kon niet worden gevonden\!
+ExportSwingWorker.5=Exporteren van 
+RenameWindowTitle=Rom hernoeming
+In=in
+UseInternalNameScan=Proberen om getrimde of aangepaste roms te herkennen door middel van de interne naam
+Demo=Demo
+ShowWifi=Wifi
+Genre=Genre
+ExportToFolder=Exporteren naar een map...
+Export=Exporteren
+InAppUpdate=Update afbeeldingen tijdens het gebruiken van het programma
+Filter=Filter
+Title=Titel
+RomSize=Rom grootte
+Location=Locatie
+Publisher=Uitgever
+Source=Dumper
+Language=Taal
+NotOwned=Niet aanwezig
+Owned=aanwezig met de goede naam
+BadNamed=aanwezig met een verkeerde naam
+FiltersTitle=Filters
+UpdateWindow.1=Update
+UpdateWindow.0=Update
+UpdateWindow.6=Verberg
+UpdateWindow.9=Stop
+SerializationHelper.0=Bestand 
+SerializationHelper.1=niet gevonden
+Consts.5=Europa
+Consts.4=VS
+Consts.6=Duitsland
+Consts.8=China
+Consts.10=Spanje
+Consts.12=Frankrijk
+Consts.14=Italië
+Consts.16=Japan
+Consts.18=Nederland
+Consts.20=Engeland
+Consts.22=Denemarken
+Consts.24=Finland
+Consts.26=Noorwegen
+Consts.28=Polen
+Consts.30=Portugal
+Consts.32=Zweden
+Consts.34=Europa/VS
+Consts.36=Europa/VS/Japan
+Consts.38=VS/Japan
+Consts.40=Australië
+Consts.42=Noord-Korea
+Consts.44=Brazilië
+Consts.46=Zuid-Korea
+Consts.48=Europa/Brazilië
+Consts.50=Europa/VS/Brazilië
+Consts.52=VS/Brazilië
+Consts.54=Rusland
+Consts.56=Griekenland
+Consts.75=Frans
+Consts.76=Engels
+Consts.77=Chinees
+Consts.78=Deens
+Consts.79=Nederlands
+Consts.80=Fins
+Consts.81=Duits
+Consts.82=Italiaans
+Consts.83=Japans
+Consts.84=Noors
+Consts.85=Pools
+Consts.86=Portugees
+Consts.87=Spaans
+Consts.88=Zweeds
+Consts.89=Engels
+Consts.90=Portugees (BR)
+Consts.91=Koreaans
+Consts.92=Russisch
+Consts.93=Grieks
+Engine.0=Geen configuratiebestand gevonden.\n\nMaak er a.u.b. een aan \!
+Engine.1=Configuratie
+FileToolkit.1=Dit bestand bestaat al, het is onmogelijk het te verplaatsen
+FileToolkit.2=Fout bij het verplaatsen
+CleanSwingWorker.1=Bezig met schoonmaken...
+CleanSwingWorker.2=\ archieven die moeten worden schoongemaakt
+CleanSwingWorker.3=Schoonmaken voltooid \!
+CleanSwingWorker.5=Het bestand 
+CleanSwingWorker.6=\ bestaat niet meer \!
+CleanSwingWorker.9=\ schoongemaakt
+CompressSwingWorker.1=Voorbereiden van compressie...
+CompressSwingWorker.2=\ bestanden te compresseren.
+CompressSwingWorker.3=Compressie voltooid \!
+CompressSwingWorker.5=Het bestand
+CompressSwingWorker.6=\ bestaat niet meer \!
+CompressSwingWorker.7=Compressie van het bestand \ 
+CompressSwingWorker.8=Dit bestand is al een archief \!
+CompressSwingWorker.9=\ ingepakt
+CompressWindow.0=Inpakken
+CompressWindow.1=Compressie van bestanden
+CompressWindow.5=Verberg
+CompressWindow.8=Stop
+RofageLanguageHelper.1=Frans
+RenameSwingWorker.1=Voorbereiden op hernoemen...
+RenameSwingWorker.2=\ roms te hernoemen.
+RenameSwingWorker.3=Hernoemen voltooid \!
+RenameSwingWorker.4=Het bestand
+RenameSwingWorker.5=\ bestaat niet meer \!
+ScanSwingWorker.1=Bezig met scannen van mappen... Dit kan even duren \!
+ScanSwingWorker.2=Scannen voltooid \!
+ScanSwingWorker.3=Scannen van 
+ScanSwingWorker.4=Deze map kan niet worden gebruikt\!
+ScanSwingWorker.5=Fout
+ScanSwingWorker.6=Bezig met annuleren... Invalide map\!
+ScanSwingWorker.7=Bezig met voorbereiden op scannen... 
+ScanSwingWorker.8=\ bestanden te scannen
+UpdateSwingWorker.1=Lezen van afbeeldingen
+UpdateSwingWorker.4=Een nieuwere versie van de DAT 
+UpdateSwingWorker.5=\ is verkrijgbaar (versie 
+UpdateSwingWorker.7=Bezig met downloaden van de DAT
+UpdateSwingWorker.8=Het gedownloade bestand bevat meer dan één bestand... Fatale fout \! :(
+UpdateSwingWorker.9=Een nieuwe versie van de DAT is gedownload
+UpdateSwingWorker.10=De DAT 
+UpdateSwingWorker.11=\ is up-to-date (versie 
+UpdateSwingWorker.13=Bezig met downloaden van bestand 
+UpdateSwingWorker.14=Het bestand is niet volledig gelezen (slechts 
+UpdateSwingWorker.15=\ van de 
+UpdateSwingWorker.17=Zoeken naar een nieuwere DAT voor 
+MainWindow.1=Taal
+MainWindow.3=Bestand
+MainWindow.4=Over
+MainWindow.5=Informatie
+MainWindow.6=Update
+MainWindow.7=Configuratie
+MainWindow.8=Scannen
+MainWindow.9=Hernoemen
+MainWindow.10=Schoonmaken
+MainWindow.14=Inpakken
+GameListTableModel.3=Titel
+ShowAboutAction.2=\nOntwikkeld door Pierre Chastagner\n\nMet dank aan t4ils voor zijn hulp :) :)\nDuitse vertaling : IsSuE_\nNederlandse vertaling: Maikel Steneker\n\nGa naar http://code.google.com/p/rofage/ voor :\n- Het downloaden van de nieuwste versie,\n- Bugs rapporteren,\n- Nieuwe features aanvragen\n- of de wiki te lezen of aan te vullen\n\nGebruikt librairies\n- jDOM (http://www.jdom.org/)\n- TrueZip (https://truezip.dev.java.net/)
+GameListSelectionListener.3=Release : 
+GameListSelectionListener.5=Rom grootte : 
+GameListSelectionListener.2=CRC : 
+GameListSelectionListener.9=Dumper : 
+GameListSelectionListener.11=Ta(a)l(en) : 
+GameListSelectionListener.13=Bewerken : 
+GameListSelectionListener.15=Groep : 
+ChangeConfInConfListener.0=Wil je de huidige configuratie opslaan voordat je doorgaat?
+ChangeConfInConfListener.1=De configuratie opslaan
+RemoveConfConfirmationTitle=De configuratie verwijderen
+RemoveConfConfirmation=Weet je zeker dat je wilt verwijderen
+RemoveConfAction.1=Wil je de bijbehorende afbeeldingen verwijderen ?
+RemoveConfAction.2=Verwijderen
+AddConfAction.1=Wil je je instellingen opslaan voordat je een nieuwe DAT toevoegt ?
+AddConfAction.2=Instellingen opslaan
+AddConfAction.3=Dit DAT-bestand is al geconfigureerd.\n\nJe kunt deze configuratie direct aanpassen.
+AddConfAction.4=Fout
+CleanWindow.0=Schoonmaken
+CleanWindow.1=Schoonmaken van archieven
+CleanWindow.5=Verberg
+CleanWindow.8=Stop
+ConfWindow.1=XML-bestanden (*.xml)
+ConfWindow.2=Configuratie
+ConfWindow.3=Scan
+ConfWindow.4=Roms titels
+ConfWindow.5=Update
+ConfWindow.6=Roms mappen
+ConfWindow.7=naar
+ConfWindow.8=DAT en afbeeldingen automatisch updaten
+ConfWindow.9=Namen van roms
+ConfWindow.10=Hernoemen binnen archieven
+ConfWindow.11=Open...
+ConfWindow.12=Open...
+ConfWindow.13=Opslaan
+ConfWindow.14=Annuleren
+ConfWindow.15=Toevoegen
+ConfWindow.16=Verwijderen
+ConfWindow.17=%n Release nummer\t%t titel\t\t%s Rom grootte\n%l Locatie\t\t%p Bewerken\t\t%S dumper\n%L talen\t%c CRC\t\t%M Multi\n%C Landscode
+ConfWindow.18=Beschikbare namen
+ConfWindow.19=Veld om te gebruiken voor het release nummer\ 
+RenameWindow.0=Hernoemen
+RenameWindow.5=Verberg
+RenameWindow.8=Stop
+ScanWindow.0=Scan
+ScanWindow.5=Verberg
+ScanWindow.8=Stop
+PanelGameInfos.3=De groep die de rom heeft uitgebracht
+PanelGameInfos.5=De CRC-waarde van de rom. Een CRC-waarde is een unieke waarde voor het bestand
+PanelGameInfos.7=Het genre van het spel
+PanelGameInfos.9=De ta(a)l(en) waarin het spel gespeeld kan worden. Een rom kan meerdere talen bevatten
+PanelGameInfos.11=De locatie waar de rom oorspronkelijk vandaan kwam
+PanelGameInfos.13=De originele uitgever van dit spel
+PanelGameInfos.15=Het releasenummer van deze rom
+PanelGameInfos.17=De grootte van de uitgepakte rom
+PanelGameInfos.20=Ondersteunt dit spel wifi-mogelijkheden ?
+IconHelper.7=Aanwezige rom met de goede naam
+IconHelper.9=Aanwezige rom met een verkeerde naam
+IconHelper.11=Rom niet aanwezig
+IconHelper.15=Aangepaste rom (getrimd, gepatcht of beschadigd)
+IconHelper.17=Clean rom
